services/gateway/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: homelab-proxy-config
    namespace: envoy-gateway-system
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: homelab
  namespace: envoy-gateway-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    lbipam.cilium.io/ips: 192.168.1.128
spec:
  gatewayClassName: envoy
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.bonchan.org"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.bonchan.org"
      tls:
        mode: Terminate
        certificateRefs:
          - name: bonchan-org-tls
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - authentik
                  - monitoring
                  - argocd
                  - homepage
                  - kube-system
                  - proxmox
                  - router
                  - ollama
                  - garage
                  - media
                  - bentopdf
                  - transmute
                  - servicios
                  - stalwart
                  - snappymail
                  - foundryvtt
                  - code-server
